# game_manager

./: README.md  pyproject.toml
doc/: Architecture.md  Design.md  Specification.md
tests/: conftest.py  helpers.py  run_smoke_tests.py  test_dnd5_combat.py  test_lonewolf_combat.py
tests/fixtures/: dnd5_campaign.json  lonewolf_campaign.json
