[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "game-manager-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120          # per-test hard cap (seconds)
log_cli = true
log_cli_level = "INFO"

[tool.setuptools.packages.find]
where = ["."]
include = ["tests*"]
